samples/_failures_safe/1761315590_a6f013_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34d6c3c3.c: In function ‘main’:
./samples/SAFE/__tmp_34d6c3c3.c:174:5: error: expected expression at end of input
  174 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_34d6c3c3.c:174:5: error: expected declaration or statement at end of input
